<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_red_background"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/begin_date_label"
        android:textAppearance="@style/NYTimesSearch.TextAppearance.Title"

        app:layout_constraintBaseline_toBaselineOf="@+id/etDate"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/begin_date_label" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="none"
        android:cursorVisible="false"
        android:clickable="true"
        android:focusable="false"
        android:textColor="@color/theme_text_dark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvBeginDate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/NYTimesSearch.TextAppearance.Title"
        android:text="@string/sort_order_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/spSortOrder"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/sort_order_label" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spSortOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/etDate"
        android:gravity="right|end"

        app:layout_constraintHorizontal_bias="1.0"
        android:entries="@array/sort_orders_array"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/news_desk_values_label"
        android:textAppearance="@style/NYTimesSearch.TextAppearance.Title"
        app:layout_constraintBaseline_toBaselineOf="@+id/cbArts"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/news_desk_values_label" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/Arts"
        android:textAppearance="@style/NYTimesSearch.TextAppearance.Title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spSortOrder"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="8dp" />

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/Sports"
        android:textAppearance="@style/NYTimesSearch.TextAppearance.Title"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/cbArts"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbArts"
        app:layout_constraintHorizontal_bias="0.125" />

    <CheckBox
        android:id="@+id/cbPolitics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/Politics"
        android:textAppearance="@style/NYTimesSearch.TextAppearance.Title"
        app:layout_constraintLeft_toLeftOf="@+id/cbSports"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbSports"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_save"
        android:background="@color/theme_red_primary"
        android:textColor="@color/theme_text_dark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPolitics"
        tools:text="@string/button_save" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_cancel"
        android:background="@color/theme_red_primary"
        android:textColor="@color/theme_text_dark"
        app:layout_constraintRight_toLeftOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/cbPolitics"
        tools:text="@string/button_cancel" />
</android.support.constraint.ConstraintLayout>